h1. CHANGELOG

h2. 1.0.10 June 21, 2011

* add 'extras' recipe
* add 'rails-footnotes' to 'extras' recipe
* update gem 'cucumber-rails' from 0.5.2 to 1.0.0

h2. 1.0.9 June 20, 2011

* rename 'boilerplate' recipe to 'html5'
* add option to normalize css as alternative to full CSS reset
* correct location for HTML5 Boilerplate site root assets

h2. 1.0.8 June 19, 2011

* tweak CSS and layout for HTML5 Boilerplate

h2. 1.0.7 June 18, 2011

* add HTML5 Boilerplate recipe
* update gem 'capybara' 1.0.0.rc1 to 1.0.0

h2. 1.0.6 June 8, 2011

* fix to avoid the error "You have already activated rake..."
* for Rails 3.1, install a gem for a Javascript runtime for Linux users
* update gems for Rails 3.1: haml 3.1.2, cucumber-rails 0.5.2, capybara 1.0.0.rc1
* minor change to URLs for downloading 'raw' files from GitHub

h2. 1.0.5 May 27, 2011

* adjust Javascript and stylesheet link tags for Rails 3.1 
* adjust CSS stylesheets location for Rails 3.1 
* use HTML 5 for Haml
* fix indentation in devise_navigation recipe for Haml
* update gems for Rails 3.0.8 and 3.1: cucumber-rails 0.5.1, capybara 1.0.0.beta1, rspec 2.6.1
* remove "fix_rake" recipe, was needed for Rails 3.0.7, not needed for Rails 3.0.8

h2. 1.0.4 May 24, 2011

* for Rails 3.0, use only gem versions that we know work
* for Rails 3.1+, use optimistic versioning for gems
* add "fix_rake" recipe for Rails 3.0 that binds the rake gem at version 0.8.7 

h2. 1.0.3 May 19, 2011

* new gem versions: devise, bson_ext, rspec-rails, cucumber-rails, capybara
* bugfix for jquery recipe
* exception handling if RSpec or Cucumber example files are unobtainable

h2. 1.0.0 May 17, 2011

* rename project from rails3_devise_wizard to rails_apps_composer and move to new repo at "http://github.com/RailsApps/":http://github.com/RailsApps/ 

h2. 0.3.2 May 17, 2011

* omniauth recipe no longer requires add_user recipe
* fixed a syntax error in the omniauth recipe

h2. 0.3.1 May 13, 2011
